menambahkan css pada form login, memperbarui logic pada register, menambahkan file css untuk register

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,14 +41,15 @@ body {
   color: #007bff;
 }
 
-#main-content {
+.content {
   padding: 2em;
   max-width: 800px;
 }
 
-section {
+/* section {
   margin-bottom: 2rem;
-}
+} */
+
 h1,
 h2 {
   margin-bottom: 1rem;
